--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
     <body>
         <!-- element used for testing purposes only, I have been using it to tell when the code has been updated for testing -->
         <div id= "testing">
-            <h2> Hello8 </h2>
+            <h2> Hello9 </h2>
         </div>
         <!-- element used for tracking fish food -->
         <div id="ffh">
@@ -62,7 +62,10 @@
             <!-- fish test -->
             <a-fish fish x='-.5' y='0' z='-.5'></a-fish>
             <a-fish fish x='.5' y='0' z='-.5'></a-fish>
-            <a-camera></a-camera>
+            <a-camera>
+                <a-entity id="fishhold"></a-entity>
+                <a-fish z='-.1' radius='.05' color='green'></a-fish>
+            </a-camera>
             <!-- used to preload objects -->
             <a-assets>
             <!-- preload image -->
