--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
     <body>
         <!-- element used for testing purposes only, I have been using it to tell when the code has been updated for testing -->
         <div id= "testing">
-            <h2> Hello2 </h2>
+            <h2> Hello3 </h2>
         </div>
         <!-- element used for tracking fish food -->
         <div id="ffh">
@@ -64,7 +64,7 @@
             <a-fish fish x='.5' y='0' z='-.5'></a-fish>
             <a-camera>
                 <a-entity id="fishhold"></a-entity>
-                <a-fish z='-.1' radius='.01' color='green'></a-fish>
+                <a-fish z='-.1' y='-.1' radius='.01' color='green'></a-fish>
             </a-camera>
             <!-- used to preload objects -->
             <a-assets>
