--- a/main.html
+++ b/main.html
@@ -66,7 +66,7 @@
             <a-boxtest x='1' y='.5' z='-1'>
                 <a-animation attribute="position" from="1 .5 -1" to="-1 .5 -1" dur="1000" direction="normal" begin='click'></a-animation>
             </a-boxtest>
-
+            <!-- animation event test using animation component-->
             <a-boxtest color='yellow' x='1' y='.6' z='-1' animation="
                                                             property: position;
                                                             from: 1 .6 -1;
