--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
         <script src="https://aframe.io/releases/0.8.0/aframe.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/three.ar.js@latest/dist/three.ar.js"></script>
         <script src="https://cdn.jsdelivr.net/gh/chenzlabs/aframe-ar@master/dist/aframe-ar.js"></script>
+        <script src="https://unpkg.com/aframe-animation-component@5.1.2/dist/aframe-animation-component.min.js"></script>
         <script src="main.js"></script>
         <script src="primitives.js"></script>
         <script src="fish.js"></script>
@@ -16,7 +17,7 @@
     <body>
         <!-- element used for testing purposes only, I have been using it to tell when the code has been updated for testing -->
         <div id= "testing">
-            <h2> Hello1 </h2>
+            <h2> Hello2 </h2>
         </div>
         <!-- element used for tracking fish food -->
         <div id="ffh">
