--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
     <body>
         <!-- element used for testing purposes only, I have been using it to tell when the code has been updated for testing -->
         <div id= "testing">
-            <h2> Hello0 </h2>
+            <h2> Hello1 </h2>
         </div>
         <!-- element used for tracking fish food -->
         <div id="ffh">
@@ -85,6 +85,9 @@
                                                             startEvents: click;
                                                             ">
             </a-boxtest>
+
+            <!-- animation event test using registered animation component -->
+            <a-boxtest slideanim color='blue' x='1' y='.7' z='-1'></a-boxtest>
 
             <!-- camera used for the scene -->
             <a-camera>
