--- a/main.html
+++ b/main.html
@@ -12,12 +12,13 @@
         <script src="primitives.js"></script>
         <script src="fish.js"></script>
         <script src="tracking.js"></script>
+        <script src="anim.js"></script>
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
         <!-- element used for testing purposes only, I have been using it to tell when the code has been updated for testing -->
         <div id= "testing">
-            <h2> Hello0 </h2>
+            <h2> Hello1 </h2>
         </div>
         <!-- element used for tracking fish food -->
         <div id="ffh">
