--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
     <body>
         <!-- element used for testing purposes only, I have been using it to tell when the code has been updated for testing -->
         <div id= "testing">
-            <h2> Hello6 </h2>
+            <h2> Hello7 </h2>
         </div>
         <!-- element used for tracking fish food -->
         <div id="ffh">
@@ -68,8 +68,8 @@
             <a-boxtest fishfoodcollection x='0' y='0' z='-1'></a-boxtest>
 
             <!-- fish test -->
-            <a-fish fish x='-.5' y='0' z='-.5' radius='.01' color="blue"></a-fish>
-            <a-fish fish x='.5' y='0' z='-.5' radius='.01' color="blue"></a-fish>
+            <a-fish fishslideto fish x='-.5' y='0' z='-.5' radius='.01' color="blue"></a-fish>
+            <a-fish fishslideto fish x='.5' y='0' z='-.5' radius='.01' color="blue"></a-fish>
 
             <!-- animation event test using a-animation -->
             <a-boxtest x='1' y='.5' z='-1'>
@@ -92,7 +92,7 @@
 
             <!-- camera used for the scene -->
             <a-camera>
-                <a-entity fishslideto id="fishhold" position="0 .02 -.1"></a-entity>
+                <a-entity id="fishhold" position="0 .02 -.1"></a-entity>
                 <a-fish z='-.1' y='.02' radius='.01' color='green'></a-fish>
             </a-camera>
             
