--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
     <body>
         <!-- element used for testing purposes only, I have been using it to tell when the code has been updated for testing -->
         <div id= "testing">
-            <h2> Hello4 </h2>
+            <h2> Hello5 </h2>
         </div>
         <!-- element used for tracking fish food -->
         <div id="ffh">
@@ -70,6 +70,9 @@
             <!-- fish test -->
             <a-fish fishslideto fishslidefrom fish x='-.5' y='0' z='-.5' radius='.01' color="blue"></a-fish>
             <a-fish fishslideto fishslidefrom fish x='.5' y='0' z='-.5' radius='.01' color="blue"></a-fish>
+
+            <!-- new fish test -->
+            <a-fish fish2 x='.5' y='.1' z='-.5' radius='.01' color="red"></a-fish>
 
             <!-- animation event test using a-animation -->
             <a-boxtest x='1' y='.5' z='-1'>
